--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
 server.port=9090
-spring.cloud.config.server.git.uri=ssh://localhost/config-repo
+spring.cloud.config.server.git.uri=https://github.com/venkatasandu/javaproject.git
 spring.cloud.config.server.git.clone-on-start=true
 spring.security.user.name=root
 spring.security.user.password=venkat
